--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <button id="rockLaunch1">Launch a small rocket</button>
 <br />
-	<div id="money"></div>
+	<div id="money">0</div>
 <br />
 <script type="text/javascript" src="main.js"></script>
 
