--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 	</head>
   <body>
 <button id="rockLaunch1">Launch a small rocket</button>
-<br />
-	You have <div id="money"></div>$
-<br />
+<br>
+	You have <div id="money"></div>$<br>
 <script type="text/javascript" src="main.js"></script>
 
 
