--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <br>
 	You have <span id = "money"></span>$<br>
 <script type="text/javascript" src="main.js"></script>
-
-
+<script>
+setInterval(update, 50);
+	  </script>
   </body>
   </html>
