--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	You have <span id = "money"></span>$<br>
 <script type="text/javascript" src="main.js"></script>
 <script>
-setInterval(update, 50);
+setInterval(50);
 	  </script>
   </body>
   </html>
