--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <button onclick="rockLaunch1()">Launch a small rocket</button>
 <br>
 	You have <span id = "money"></span>$<br>
+	  You have <span id = "fuel"></span> fuel.<br>
+	  <button onclick="buyFuel()">Buy some fuel!</button>
 <script type="text/javascript" src="main.js"></script>
 	  <br>
 	  <br>
