--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <br>
 	You have <span id = "money"></span>$<br>
 	  You have <span id = "fuel"></span> fuel.<br>
-	  <button onclick="buyFuel()">Buy some fuel!</button>
+	  <button onclick="buyFuel(100)">Buy some fuel!</button>
 <script type="text/javascript" src="main.js"></script>
 	  <br>
 	  <br>
