--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <br>
 	You have <span id = "money"></span>$<br>
 	  You have <span id = "fuel"></span> fuel.<br>
+	  The current cost of fuel is <span id = "fuelCost"></span>$<br>
 	  <button onclick="buyFuel(150)">Buy some fuel!</button>
 <script type="text/javascript" src="main.js"></script>
 	  <br>
