--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 	</head>
   <body>
-<button onclick="rockLaunch1()">Launch a small rocket</button>
+<button onclick="rockLaunch1()"><br>Launch a small rocket<br></button>
 <br>
 	You have <span id = "money"></span>$<br>
 	  You have <span id = "fuel"></span> fuel.<br>
