--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <br>
 	You have <span id = "money"></span>$<br>
 	  You have <span id = "fuel"></span> fuel.<br>
+	  Your maximum fuel is <span id = "fuelMax"></span><br>
 	  The current cost of fuel is <span id = "fuelCost"></span>$<br>
-	  <button onclick="buyFuel(150)">Buy some fuel!</button>
+	  <button onclick="buyFuel()">Buy some fuel!</button>
+	  <button onclick="upgrade1()">Increase your fuel capacity by 10%.<br>Cost:<span id = "upgrade1Cost"></span></button>
 <script type="text/javascript" src="main.js"></script>
 	  <br>
 	  <br>
