--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	  <button onclick="buyFuel()">Buy some fuel!</button><br>
 	  <button onclick="upgrade1()">Increase your fuel capacity by 10%.<br>Cost:<span id = "upgrade1Cost"></span></button>
 <script type="text/javascript" src="main.js"></script>
+	  <button onclick="upgrade2()">Decrease the cost of fuel by $1.<br>Cost:<span id = "upgrade2Cost"></span></button>
 	  <br>
 	  <br>
 	  <br>
