--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	You have <span id = "money"></span>$<br>
 	  You have <span id = "fuel"></span> fuel.<br>
 	  Your maximum fuel is <span id = "fuelMax"></span><br>
-	  The current cost of fuel is <span id = "fuelCost"></span>$<br>
+	  The current cost of 1 fuel is <span id = "fuelCost"></span>$<br>
 	  <button onclick="buyFuel()">Buy some fuel!</button><br>
-	  <button onclick="upgrade1()">Increase your fuel capacity by 10%.<br>Cost:<span id = "upgrade1Cost"></span></button>
-	  <button onclick="upgrade2()">Decrease the cost of fuel by $1.<br>Cost:<span id = "upgrade2Cost"></span></button>
+	  <button onclick="upgrade1()">Increase your fuel capacity by 10%.<br>Cost:<span id = "upgrade1Cost"></span>$</button>
+	  <button onclick="upgrade2()">Decrease the cost of fuel by $1.<br>Cost:<span id = "upgrade2Cost"></span>$</button>
 <script type="text/javascript" src="main.js"></script>
 	  <br>
 	  <br>
