--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	  <button onclick="buyFuel()"><br>Buy some fuel!</button><br>
 	  <button onclick="upgrade1()">Increase your fuel capacity by 10%.<br>Cost:<span id = "upgrade1Cost"></span>$</button>
 	  <button onclick="upgrade2()">Decrease the cost of fuel by $1.<br>Cost:<span id = "upgrade2Cost"></span>$</button>
-	  <button onclick="upgrade3()">Increase the speed of your rocket,<br> allowing it to collect 25% more money!<br>Cost:<span if = "upgrade3Cost"></span>$</button>
+	  <button onclick="upgrade3()">Increase the speed of your rocket,<br> allowing it to collect 25% more money!<br>Cost:<span id = "upgrade3Cost"></span>$</button>
 <script type="text/javascript" src="main.js"></script>
 	  <br>
 	  <br>
