--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<head>
 	</head>
   <body>
-<button onclick="rockLaunch1()">Launch a small rocket<br>You lose all fuel, and gain money</button>
+	  <button class="tab" onclick="switchTab('game')">Game</button>
+	  <button class="tab" onclick="switchTab('test')">Test</button>
+	  <div id="game" class="inTab">
+<button onclick="rockLaunch1()">Launch a small rocket,<br>You lose your fuel, and gain money.<br>This feature will automate itself forever.</button>
 <br>
 	You have <span id = "money"></span>$<br>
 	  You have <span id = "fuel"></span> fuel.<br>
@@ -18,6 +21,29 @@
 <script type="text/javascript" src="main.js"></script>
 	  <br>
 	  <br>
+	  </div>
+	  <div id="test" class="inTab">
+		  yay it worked
+		  
+	  </div>
+	  <script>
+		  function tabs(tabName) {
+	var i, inTab, tab;
+		inTab = document.getElementsByClassName("inTab");
+  for (i = 0; i < inTab.length; i++) {
+    inTab[i].style.display = "none";
+  }	  
+	tab = document.getElementsByClassName("tab");
+  for (i = 0; i < tab.length; i++) {
+    tab[i].className = tab[i].className.replace(" active", "");
+  }
+	document.getElementById(tabName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+	
+}
+		  
+		  </script>
 	  <br>
 Thanks to SuperSpruce for some of the code! You can check out his YouTube channel <a href = "https://www.youtube.com/channel/UCrpbLYZYpwpkrW9j9x8Ci2A" target = "_blank">here</a>.
   </body>
