--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	for(var i = 0; i < classList.length; i++) {
 		classList[i].style.display = "none"
 	}
-			ge(t).style.display = ""
+			document.getElementById(t).style.display = ""
 		}
 		  tab("game")
 		  </script>
