--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
   <body>
 	  <button class="tabe" onclick="tab('game')">Game</button>
-	  <button class="tabe" onclick="tab('test')">Test</button>
+	  <button class="tabe" onclick="tab('sources')">Sources</button>
 	  <div id="game" class="tab">
 <button onclick="rockLaunch1()">Launch a small rocket,<br>You lose your fuel, and gain money.<br>This feature will automate itself forever.</button>
 <br>
@@ -22,9 +22,15 @@
 	  <br>
 	  <br>
 	  </div>
-	  <div id="test" class="tab">
-		  yay it worked
-		  
+	  <div id="sources" class="tab">
+		  Secondary:
+		  Morring, Jr., Frank. "Space race." World Book Advanced, World Book, 2019, www.worldbookonline.com/advanced/article?id=ar755298. Accessed 16 Jan. 2019.
+		  Trevino, Marcella Bush. “Space Race.” Salem Press Encyclopedia, 2018. EBSCOhost, search.ebscohost.com/login.aspx?direct=true&db=t6o&AN=89183508.
+		  McGill, Sara Ann. “The First Moon Landing.” First Moon Landing, Aug. 2017, pp. 1–2. EBSCOhost, search.ebscohost.com/login.aspx?direct=true&db=n8h&AN=17989654.
+		  https://www.khanacademy.org/humanities/us-history/postwarera/1950s-america/a/the-start-of-the-space-race
+		  https://www.history.com/topics/cold-war/space-race
+		  Primary:
+		  none yet
 	  </div>
 	  <script>
 		function tab(t) {
