--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 	  </div>
 	  <div id="sources" class="tab">
 		  Secondary:
-		  Morring, Jr., Frank. "Space race." World Book Advanced, World Book, 2019, www.worldbookonline.com/advanced/article?id=ar755298. Accessed 16 Jan. 2019.
-		  Trevino, Marcella Bush. “Space Race.” Salem Press Encyclopedia, 2018. EBSCOhost, search.ebscohost.com/login.aspx?direct=true&db=t6o&AN=89183508.
-		  McGill, Sara Ann. “The First Moon Landing.” First Moon Landing, Aug. 2017, pp. 1–2. EBSCOhost, search.ebscohost.com/login.aspx?direct=true&db=n8h&AN=17989654.
-		  https://www.khanacademy.org/humanities/us-history/postwarera/1950s-america/a/the-start-of-the-space-race
-		  https://www.history.com/topics/cold-war/space-race
+		  Morring, Jr., Frank. "Space race." World Book Advanced, World Book, 2019, www.worldbookonline.com/advanced/article?id=ar755298. Accessed 16 Jan. 2019.<br>
+		  Trevino, Marcella Bush. “Space Race.” Salem Press Encyclopedia, 2018. EBSCOhost, search.ebscohost.com/login.aspx?direct=true&db=t6o&AN=89183508.<br>
+		  McGill, Sara Ann. “The First Moon Landing.” First Moon Landing, Aug. 2017, pp. 1–2. EBSCOhost, search.ebscohost.com/login.aspx?direct=true&db=n8h&AN=17989654.<br>
+		  https://www.khanacademy.org/humanities/us-history/postwarera/1950s-america/a/the-start-of-the-space-race<br>
+		  https://www.history.com/topics/cold-war/space-race<br>
 		  Primary:
 		  none yet
 	  </div>
