--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  <button class="tabe" onclick="tab('game')">Game</button>
 	  <button class="tabe" onclick="tab('sources')">Sources</button>
 	  <div id="game" class="tab">
-<button onclick="rockLaunch1()">Launch a small rocket,<br>You lose your fuel, and gain money.<br>This feature will automate itself forever.</button>
+<button onclick="rockLaunch1()">Launch a small rocket,<br>You lose your fuel, and gain money.</button>
 <br>
 	You have <span id = "money"></span>$<br>
 	  You have <span id = "fuel"></span> fuel.<br>
