--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		  none yet
 	  </div>
 	  <div id="options" class="tab>
-				   <button onclick="fullReset">Reset the game</button>	   
+				   <button onclick="fullReset()">Reset the game</button>	   
 				   
 	</div>
 	  <script>
