--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  Primary:
 		  none yet
 	  </div>
-	  <div id="options" class="tab>
+	  <div id="options" class="tab">
 				   <button onclick="fullReset()">Reset the game</button>	   
 				   
 	</div>
