--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	  Your maximum fuel is <span id = "fuelMax"></span><br>
 	  The current cost of 1 fuel is <span id = "fuelCost"></span>$<br>
 	  <button onclick="buyFuel()"><br>Buy some fuel!</button><br>
-	  <button onclick="upgrade1()">Make your rocket longer, allowing it to <br>increase your fuel capacity by 10%!.<br>Cost:<span id = "upgrade1Cost"></span>$<br>Bought <span id = "upgrade1Buys">0</span>/5 times</button>
-	  <button onclick="upgrade2()">Disrupt the economy, so you can decrease the cost<br> of fuel by $1, and decrease the cost scaling of fuel by 10%!<br>Cost:<span id = "upgrade2Cost"></span>$<br>Bought <span id = "upgrade2Buys">0</span>/5 times</button>
-	  <button onclick="upgrade3()">Increase the speed of your rocket,<br> allowing it to collect 25% more money!<br>Cost:<span id = "upgrade3Cost"></span>$<br>Bought <span id = "upgrade2Buys">0</span>/5 times</button>
+	  <button onclick="upgrade1()">Make your rocket longer, allowing it to <br>increase your fuel capacity by 10%!.<br>Cost:<span id = "upgrade1Cost"></span>$<br>Bought <span id = "upgrade1Buys"></span>/5 times</button>
+	  <button onclick="upgrade2()">Disrupt the economy, so you can decrease the cost<br> of fuel by $1, and decrease the cost scaling of fuel by 10%!<br>Cost:<span id = "upgrade2Cost"></span>$<br>Bought <span id = "upgrade2Buys"></span>/5 times</button>
+	  <button onclick="upgrade3()">Increase the speed of your rocket,<br> allowing it to collect 25% more money!<br>Cost:<span id = "upgrade3Cost"></span>$<br>Bought <span id = "upgrade3Buys"></span>/5 times</button>
 <script type="text/javascript" src="main.js"></script>
 	  <br>
 	  <br>
