--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
 	  </div>
 	  <div id="options" class="tab">
 				   <button class="yeet" onclick="fullReset()">Reset the game</button>	   
-				   
+				   <br>
+		  <h2>Changelog</h2>
+		  <br>
+		  April 26, 2019: <br>Added prestige upgrades (broken)<br>
+		  Added CSS<br>
+		  Added more sources <br>
+		  Added lore
 	</div>
 	  <div id="prestige" class="tab">
 		  <button onclick="prestige1()">Reset everything except automation, and gain <span id = "gainOnBrainstorm"></span> creativity. <div> You must have bought at least 5 of each upgrade.</button>
