--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				   <br>
 		  <h2>Changelog</h2>
 		  <br>
-		  <h3>April 26, 2019:<h3> <br>Added prestige upgrades (broken)<br>
+		  <h3>April 26, 2019:</h3> <br>Added prestige upgrades (broken)<br>
 		  Added CSS<br>
 		  Added more sources <br>
 		  Added lore
