--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
 	  </div>
 	  <div id="options" class="tab">
 				   <button class="yeet" onclick="fullReset()">Reset the game</button>	   
-				   
+				   	   <br>
+		  <h2>Changelog</h2>
+		  <br>
+		  <h3>April 26, 2019:</h3> <br>Added prestige upgrades (broken)<br>
+		  Added CSS<br>
+		  Added more sources <br>
+		  Added lore<br>
+		  <h3>April 30, 2019:</h3> <br>Added prestige upgrades!<br>
+		  2 repeatable (increase rocket amount +1, increase creativity mult *1.5)<br>
+		  2 permanent (Join NASA/US, unlock Technologies<br>
+		  Upgrades now max out at 25 rather than 5<br>
+		  Technologies, which can provide massive boosts<br>
+		  More lore
 	</div>
 	  <div id="prestige" class="tab">
 		  <center>
