--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 <button class="basic" onclick="techRespec()"> <br>Respec TCs on next Brainstorm<br></button><br>
 		  </center>
 	  <br>
-	Thanks to SuperSpruce for some of the code! You can check out his YouTube channel <a href = "https://www.youtube.com/channel/UCrpbLYZYpwpkrW9j9x8Ci2A" target = "_blank">here</a>, and the game we're collaborating on <a href = "https://superspruce.github.io/Clover-Clicker/" target = "_blank">here<a>.
-	  </div>
+	Thanks to SuperSpruce for some of the code! You can check out his YouTube channel <a href = "https://www.youtube.com/channel/UCrpbLYZYpwpkrW9j9x8Ci2A" target = "_blank">here</a>, and the game we're collaborating on <a href = "https://superspruce.github.io/Clover-Clicker/" target = "_blank">here</a>.<br>
+	  Join our discord <a href = "https://discord.gg/QxG3Rp9" target = "_blank">here.</a>
+		  </div>
 	  <div id="sources" class="tab">
 		  Secondary:
 		  Morring, Jr., Frank. "Space race." World Book Advanced, World Book, 2019, www.worldbookonline.com/advanced/article?id=ar755298. Accessed 16 Jan. 2019.<br>
