--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <meta charset="utf-8"/>
 <html>
-	<title>Space Race Incremental</title>
+	<title>太空競賽放置</title>
 	<head>
 		<link rel="stylesheet" type="text/css" href="yeet.css">
 	</head>
   <body>
-	  <button class="basic" onclick="tab('basic')">Basic Rocket</button>
-	  <button class="explorer" onclick="tab('rock1')">Explorer</button>
-	  <button class="tabe" onclick="tab('sources')">Blueprints</button>
-	  <button class="tabe" onclick="tab('options')">Workshop</button>
-	  <button class="tabe" onclick="tab('prestige')">Brainstorm</button>
-	  <button class="tabe" onclick="tab('lore')">Journal</button>
+	  <button class="basic" onclick="tab('basic')">基本火箭</button>
+	  <button class="explorer" onclick="tab('rock1')">探險器</button>
+	  <button class="tabe" onclick="tab('sources')">藍圖</button>
+	  <button class="tabe" onclick="tab('options')">工作坊</button>
+	  <button class="tabe" onclick="tab('prestige')">頭腦風暴</button>
+	  <button class="tabe" onclick="tab('lore')">日記</button>
 	  <div id="basic" class="tab">
 <button class="yeet" onclick="rockLaunch1()">Launch a small rocket,<br>You lose your fuel, and gain money.</button>
 <br>
