--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	  <button class="tabe" onclick="tab('prestige')">頭腦風暴</button>
 	  <button class="tabe" onclick="tab('lore')">日記</button>
 	  <div id="basic" class="tab">
-<button class="yeet" onclick="rockLaunch1()">Launch a small rocket,<br>You lose your fuel, and gain money.</button>
+<button class="yeet" onclick="rockLaunch1()">發射一個小火箭，<br>你失去你的燃料，但會獲得金錢。</button>
 <br>
-	You have <span id = "money"></span>$<br>
-	  You have <span id = "fuel"></span> fuel.<br>
-	  Your current funding gives you <span id = "moneyPerFuel"></span> dollars per fuel used.<br>
-	  Your maximum fuel is <span id = "fuelMax"></span><br>
-	  The current cost of 1 fuel is <span id = "fuelCost"></span>$<br>
-	  <button class="yeet" onclick="buyFuel()"><br>Buy some fuel!<br></button><br>
+	你擁有<span id = "money"></span>$<br>
+	  你擁有<span id = "fuel"></span>燃料。<br>
+	  你當前的資金在每使用1燃料會給你<span id = "moneyPerFuel"></span>元。<br>
+	  最大燃料是<span id = "fuelMax"></span><br>
+	  1燃料的當前成本是<span id = "fuelCost"></span>$<br>
+	  <button class="yeet" onclick="buyFuel()"><br>購買一些燃料！<br></button><br>
 	  <button class="yeet" onclick="upgrade1()">Make your rocket longer, allowing it to <br>increase your fuel capacity by 10%!.<br>Cost:<span id = "upgrade1Cost"></span>$<br>Bought <span id = "upgrade1Buys"></span>/25 times</button>
 	  <button class="yeet" onclick="upgrade2()">Disrupt the economy, so you can decrease the cost<br> of fuel to $2, and decrease the cost scaling of fuel by 10%!<br>Cost:<span id = "upgrade2Cost"></span>$<br>Bought <span id = "upgrade2Buys"></span>/25 times</button>
 	  <button class="yeet" onclick="upgrade3()">Increase the speed of your rocket,<br> allowing it to collect 25% more money!<br>Cost:<span id = "upgrade3Cost"></span>$<br>Bought <span id = "upgrade3Buys"></span>/25 times</button>
