--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  最大燃料是<span id = "fuelMax"></span><br>
 	  1燃料的當前成本是<span id = "fuelCost"></span>$<br>
 	  <button class="yeet" onclick="buyFuel()"><br>購買一些燃料！<br></button><br>
-	  <button class="yeet" onclick="upgrade1()">Make your rocket longer, allowing it to <br>increase your fuel capacity by 10%!.<br>Cost:<span id = "upgrade1Cost"></span>$<br>Bought <span id = "upgrade1Buys"></span>/25 times</button>
+	  <button class="yeet" onclick="upgrade1()">變長你的火箭，可以<br>增加燃料容量10%!<br>成本:<span id = "upgrade1Cost"></span>$<br>購買 <span id = "upgrade1Buys"></span>/25 次</button>
 	  <button class="yeet" onclick="upgrade2()">Disrupt the economy, so you can decrease the cost<br> of fuel to $2, and decrease the cost scaling of fuel by 10%!<br>Cost:<span id = "upgrade2Cost"></span>$<br>Bought <span id = "upgrade2Buys"></span>/25 times</button>
 	  <button class="yeet" onclick="upgrade3()">Increase the speed of your rocket,<br> allowing it to collect 25% more money!<br>Cost:<span id = "upgrade3Cost"></span>$<br>Bought <span id = "upgrade3Buys"></span>/25 times</button>
 	  <br>
